Add google adsense script

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -76,6 +76,10 @@ const socialImageURL = new URL(
     }
 
     <script is:inline src="/toggle-theme.js"></script>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3982586798741178"
+     crossorigin="anonymous"></script>
+     
   </head>
   <body>
     <slot />
