--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   <Header />
   <main id="main-content">
     <section id="hero">
-      <h1>FDSEVEN</h1>
+      <h1>All About PES 2021, patch, mods, tutorial, and many more...</h1>
       <a
         target="_blank"
         href="/rss.xml"
