--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,6 +46,20 @@ const socialCount = SOCIALS.filter(social => social.active).length;
         out of the box. Light and dark mode are supported by default. Moreover,
         additional color schemes can also be configured.
       </p>
+
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3982586798741178"
+          crossorigin="anonymous"></script>
+      <!-- ad unit 1 -->
+      <ins class="adsbygoogle"
+          style="display:block"
+          data-ad-client="ca-pub-3982586798741178"
+          data-ad-slot="1560677492"
+          data-ad-format="auto"
+          data-full-width-responsive="true"></ins>
+      <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+
       <p>
         Read the blog posts or check
         <LinkButton
