Add Privacy Policy page

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,6 +15,7 @@ const { noMarginTop = false } = Astro.props;
   <Hr noPadding />
   <div class="footer-wrapper">
     <!-- <Socials centered /> -->
+    <a href="/privacy-policy">Privacy Policy</a>
     <div class="copyright-wrapper">
       <span>Copyright &#169; {currentYear}</span>
       <span class="separator">&nbsp;|&nbsp;</span>
