--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </a>
 
       <p>
-        Bagi semua penggemar sepak bola, Pro Evolution Soccer adalah sesuatu game Sepak Bola. Maka dari itu, PESMANIA menghadirkan add-on dan pembaruan terbaik bagi semua gamer terutama PES, untuk tetap semangat dan memiliki antusias yang tinggi. Dengan ini, PESMANIA juga berusaha menjadi platform terbaik bagi mereka yang mencari simulator sepak bola terbaik di dunia. Kami membagikan modul terbaru yang memungkinkan memiliki banyak papan skor untuk kompetisi atau liga apa pun. Patch terbaru dapat menjadikan semua tim berlisensi dengan nama resmi, logo, kit, dan yang lainnya.</p>
+        Bagi semua penggemar sepak bola, pasti sudah tidak asing lagi dengan game Pro Evolution Soccer. Maka dari itu, PESMANIA menghadirkan add-on dan pembaruan terbaik bagi semua gamer terutama PES, untuk tetap semangat dan memiliki antusias yang tinggi. Dengan ini, PESMANIA juga berusaha menjadi platform terbaik bagi mereka yang mencari simulator sepak bola terbaik di dunia. Kami membagikan modul terbaru yang memungkinkan memiliki banyak papan skor untuk kompetisi atau liga apa pun. Patch terbaru dapat menjadikan semua tim berlisensi dengan nama resmi, logo, kit, dan yang lainnya.</p>
 
       <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3982586798741178"
           crossorigin="anonymous"></script>
