--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -14,8 +14,7 @@ const { noMarginTop = false } = Astro.props;
 <footer class={`${noMarginTop ? "" : "mt-auto"}`}>
   <Hr noPadding />
   <div class="footer-wrapper">
-    <!-- <Socials centered /> -->
-    <a href="/privacy-policy">Privacy Policy</a>
+    <Socials centered />
     <div class="copyright-wrapper">
       <span>Copyright &#169; {currentYear}</span>
       <span class="separator">&nbsp;|&nbsp;</span>
