--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -12,13 +12,21 @@
     --color-card-muted: 205, 205, 205;
     --color-border: 236, 233, 233;
   }
-  html[data-theme="dark"] {
+  /* html[data-theme="dark"] {
     --color-fill: 33, 39, 55;
     --color-text-base: 234, 237, 243;
     --color-accent: 255, 107, 1;
     --color-card: 52, 63, 96;
     --color-card-muted: 138, 51, 2;
     --color-border: 171, 75, 8;
+  } */
+  html[data-theme="dark"] {
+    --color-fill: 33, 39, 55;
+    --color-text-base: 234, 237, 243;
+    --color-accent: 235, 63, 211;
+    --color-card: 52, 63, 96;
+    --color-card-muted: 125, 79, 124;
+    --color-border: 100, 36, 81;
   }
   #sun-svg,
   html[data-theme="dark"] #moon-svg {
@@ -29,7 +37,7 @@
     display: block;
   }
   body {
-    @apply flex min-h-screen flex-col bg-skin-fill font-mono text-skin-base 
+    @apply flex min-h-[100svh] flex-col bg-skin-fill font-mono text-skin-base 
     selection:bg-skin-accent selection:bg-opacity-70 selection:text-skin-inverted;
   }
   section,
@@ -70,7 +78,7 @@
     prose-img:border-skin-line prose-hr:!border-skin-line;
   }
   .prose a {
-    @apply hover:!text-skin-accent;
+    @apply break-words hover:!text-skin-accent;
   }
   .prose thead th:first-child,
   tbody td:first-child,
@@ -115,9 +123,13 @@
     @apply bg-skin-card-muted;
   }
 
-  code {
+  code,
+  blockquote {
+    word-wrap: break-word;
+  }
+
+  pre > code {
     white-space: pre;
-    overflow: scroll;
   }
 }
 
