--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -59,11 +59,46 @@ const socialImageURL = new URL(
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,500;0,600;0,700;1,400;1,600&display=swap"
-      rel="stylesheet"
-    />
-
+    <style>
+      @font-face {
+          font-family: 'PremierLeague2024';
+          src: url('assets/fonts/PremierLeague2024.woff') format('woff'),
+              url('assets/fonts/PremierLeague2024.ttf') format('truetype');
+          font-weight: normal;
+          font-style: normal;
+          font-display: swap;
+      }
+      @font-face {
+          font-family: 'PremierLeague';
+          src: url('assets/fonts/PremierLeague-Regular.eot');
+          src: url('assets/fonts/PremierLeague-Regular.eot?#iefix') format('embedded-opentype'),
+              url('assets/fonts/PremierLeague-Regular.woff') format('woff'),
+              url('assets/fonts/PremierLeague-Regular.ttf') format('truetype');
+          font-weight: 400;
+          font-style: normal;
+          font-display: swap;
+      }
+      @font-face {
+          font-family: 'PremierLeague';
+          src: url('assets/fonts/PremierLeague-Heavy.eot');
+          src: url('assets/fonts/PremierLeague-Heavy.eot?#iefix') format('embedded-opentype'),
+              url('assets/fonts/PremierLeague-Heavy.woff') format('woff'),
+              url('assets/fonts/PremierLeague-Heavy.ttf') format('truetype');
+          font-weight: 900;
+          font-style: normal;
+          font-display: swap;
+      }
+      @font-face {
+          font-family: 'PremierLeague';
+          src: url('assets/fonts/PremierLeague-Bold.eot');
+          src: url('assets/fonts/PremierLeague-Bold.eot?#iefix') format('embedded-opentype'),
+              url('assets/fonts/PremierLeague-Bold.woff') format('woff'),
+              url('assets/fonts/PremierLeague-Bold.ttf') format('truetype');
+          font-weight: bold;
+          font-style: normal;
+          font-display: swap;
+      }
+    </style>
     <meta name="theme-color" content="" />
 
     {
