--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,4 @@
 ---
-import Hr from "./Hr.astro";
 import Socials from "./Socials.astro";
 
 const currentYear = new Date().getFullYear();
@@ -12,7 +11,6 @@ const { noMarginTop = false } = Astro.props;
 ---
 
 <footer class={`${noMarginTop ? "" : "mt-auto"}`}>
-  <Hr noPadding />
   <div class="footer-wrapper">
     <Socials centered />
     <div class="copyright-wrapper">
@@ -20,15 +18,16 @@ const { noMarginTop = false } = Astro.props;
       <span class="separator">&nbsp;|&nbsp;</span>
       <span>All rights reserved.</span>
     </div>
+    <a href="#" class="hover:text-skin-accent">Privacy Policy</a>
   </div>
 </footer>
 
 <style>
   footer {
-    @apply w-full;
+    @apply fixed bottom-0 w-full max-w-none p-0;
   }
   .footer-wrapper {
-    @apply flex flex-col items-center justify-between py-6 sm:flex-row-reverse sm:py-4;
+    @apply flex flex-col items-center mx-auto max-w-5xl justify-between px-4 py-6 sm:flex-row-reverse sm:py-4;
   }
   .link-button {
     @apply my-1 p-2 hover:rotate-6;
