--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,5 @@
 ---
 import { LOGO_IMAGE, SITE } from "@config";
-import Hr from "./Hr.astro";
 import LinkButton from "./LinkButton.astro";
 
 export interface Props {
@@ -10,11 +9,11 @@ export interface Props {
 const { activeNav } = Astro.props;
 ---
 
-<header>
+<header id="main-header" class="fixed z-30 w-full bg-skin-fill transition-transform duration-700 ease-in-out">
   <a id="skip-to-content" href="#main-content">Skip to content</a>
   <div class="nav-container">
     <div class="top-nav-wrap">
-      <a href="/" class="logo whitespace-nowrap">
+      <a href="/" class="logo whitespace-nowrap font-PremierLeague2024 tracking-wider">
         {
           LOGO_IMAGE.enable ? (
             <img
@@ -112,7 +111,7 @@ const { activeNav } = Astro.props;
       </nav>
     </div>
   </div>
-  <Hr />
+  <hr class="border-skin-line" />
 </header>
 
 <style>
@@ -120,13 +119,13 @@ const { activeNav } = Astro.props;
     @apply absolute -top-full left-16 z-50 bg-skin-accent px-3 py-2 text-skin-inverted transition-all focus:top-4;
   }
   .nav-container {
-    @apply mx-auto flex max-w-3xl flex-col items-center justify-between sm:flex-row;
+    @apply mx-auto flex max-w-5xl flex-col items-center justify-between sm:flex-row;
   }
   .top-nav-wrap {
     @apply relative flex w-full items-start justify-between p-4 sm:items-center sm:py-8;
   }
   .logo {
-    @apply absolute py-1 text-xl font-semibold sm:static sm:text-2xl;
+    @apply absolute py-1 text-xl font-semibold sm:static sm:text-4xl mt-0.5;
   }
   .hamburger-menu {
     @apply self-end p-2 sm:hidden;
@@ -145,7 +144,7 @@ const { activeNav } = Astro.props;
     @apply col-span-2 flex items-center justify-center;
   }
   nav ul li a {
-    @apply w-full px-4 py-3 text-center font-medium hover:text-skin-accent sm:my-0 sm:px-2 sm:py-1;
+    @apply w-full px-4 py-3 text-center font-bold hover:text-skin-accent sm:my-0 sm:px-2 sm:py-1;
   }
   nav ul li:nth-last-child(2) a {
     @apply w-auto;
@@ -186,6 +185,26 @@ const { activeNav } = Astro.props;
   .menu-icon.is-active .close {
     @apply opacity-100;
   }
+  #main-header {
+    &.hide {
+      @apply
+        translate-y-[-100px]
+        top-0;
+    }
+    >div {
+      @apply 
+        sm:h-[100px];
+    }
+    &.small {
+      @apply
+        bg-skin-fill;
+    }
+    .nav-open & {
+      @apply
+        translate-y-[100px]
+        top-[-100px];
+    }
+  }
 </style>
 
 <script>
@@ -211,4 +230,38 @@ const { activeNav } = Astro.props;
 
   // Runs on view transitions navigation
   document.addEventListener("astro:after-swap", toggleNav);
+
+  var prevScrollpos = window.scrollY;
+
+  /* Get the header element and it's position */
+  var headerDiv = document.querySelector("#main-header");
+  // @ts-ignore
+  var headerBottom = headerDiv.offsetTop + headerDiv.offsetHeight*8;
+
+  window.onscroll = function() {
+    var currentScrollPos = window.scrollY;
+
+    /* if we're scrolling up, or we haven't passed the header,
+      show the header at the top */
+    if (prevScrollpos > currentScrollPos  || currentScrollPos < headerBottom) {  
+      // @ts-ignore
+        headerDiv.classList.remove("hide");
+    }
+    else {
+        /* otherwise we're scrolling down & have passed the header so hide it */// @ts-ignore
+        headerDiv.classList.add("hide");
+    } 
+
+    prevScrollpos = currentScrollPos;
+
+    if(150 > currentScrollPos) {
+      // @ts-ignore
+      headerDiv.classList.remove("small");
+    }
+    else {
+      // @ts-ignore
+      headerDiv.classList.add("small");
+    }
+  }
+
 </script>
