--- a/src/layouts/AboutLayout.astro
+++ b/src/layouts/AboutLayout.astro
@@ -18,11 +18,12 @@ const { frontmatter } = Astro.props;
 <Layout title={`${frontmatter.title} | ${SITE.title}`}>
   <Header activeNav="about" />
   <Breadcrumbs />
-  <main id="main-content">
-    <section id="about" class="prose mb-28 max-w-3xl prose-img:border-0">
-      <h1 class="text-2xl tracking-wider sm:text-3xl">{frontmatter.title}</h1>
+  <main id="main-content" class="bg-skin-fill z-10">
+    <section id="about" class="prose mb-16 max-w-5xl prose-img:border-0">
+      <h1 class="text-2xl font-PremierLeague2024 tracking-wider sm:text-4xl">{frontmatter.title}</h1>
       <slot />
     </section>
   </main>
+  <hr class="border-skin-line mb-44 sm:mb-[75px]" />
   <Footer />
 </Layout>
