--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -34,10 +34,11 @@ const { props } = Astro;
   <p>{props.pageDesc}</p>
   <slot />
 </main>
+<hr class="border-skin-line mb-44 sm:mb-[75px]" />
 
 <style>
   #main-content {
-    @apply mx-auto w-full max-w-3xl px-4 pb-12;
+    @apply mx-auto w-full max-w-5xl px-4 pb-12 z-10 bg-skin-fill;
   }
   #main-content h1 {
     @apply text-2xl font-semibold sm:text-3xl;
