--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,6 @@ import Footer from "@components/Footer.astro";
 import LinkButton from "@components/LinkButton.astro";
 import Hr from "@components/Hr.astro";
 import Card from "@components/Card";
-import Socials from "@components/Socials.astro";
 import getSortedPosts from "@utils/getSortedPosts";
 import slugify from "@utils/slugify";
 import { SOCIALS } from "@config";
@@ -21,9 +20,9 @@ const socialCount = SOCIALS.filter(social => social.active).length;
 
 <Layout>
   <Header />
-  <main id="main-content">
+  <main id="main-content" class="mt-24 bg-skin-fill z-10">
     <section id="hero">
-      <h1 class="mr-2">All About PES 2021, patch, mods, tutorial, and many more...</h1>
+      <h1 class="mr-2 text-skin-accent">All About PES 2021, patch, mods, tutorial, and many more...</h1>
       <!-- <a
         target="_blank"
         href="/rss.xml"
@@ -60,7 +59,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       featuredPosts.length > 0 && (
         <>
           <section id="featured">
-            <h2>Featured</h2>
+            <h2 class="font-PremierLeague2024">Featured</h2>
             <ul>
               {featuredPosts.map(({ data }) => (
                 <Card
@@ -77,8 +76,8 @@ const socialCount = SOCIALS.filter(social => social.active).length;
     }
 
     <section id="recent-posts">
-      <h2>Recent Posts</h2>
-      <ul>
+      <h2 class="font-PremierLeague2024">Recent Posts</h2>
+      <ul class="sm:grid sm:grid-cols-2 sm:gap-6">
         {
           sortedPosts
             .filter(({ data }) => !data.featured)
@@ -106,6 +105,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </div>
     </section>
   </main>
+  <hr class="border-skin-line mb-44 sm:mb-[75px]" />
 
   <Footer />
 </Layout>
