UPDDATES, fonts URL

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -62,38 +62,38 @@ const socialImageURL = new URL(
     <style>
       @font-face {
           font-family: 'PremierLeague2024';
-          src: url('assets/fonts/PremierLeague2024.woff') format('woff'),
-              url('assets/fonts/PremierLeague2024.ttf') format('truetype');
+          src: url('https://www.pesmania.web.id/assets/fonts/PremierLeague2024.woff') format('woff'),
+              url('https://www.pesmania.web.id/assets/fonts/PremierLeague2024.ttf') format('truetype');
           font-weight: normal;
           font-style: normal;
           font-display: swap;
       }
       @font-face {
           font-family: 'PremierLeague';
-          src: url('assets/fonts/PremierLeague-Regular.eot');
-          src: url('assets/fonts/PremierLeague-Regular.eot?#iefix') format('embedded-opentype'),
-              url('assets/fonts/PremierLeague-Regular.woff') format('woff'),
-              url('assets/fonts/PremierLeague-Regular.ttf') format('truetype');
+          src: url('https://www.pesmania.web.id/assets/fonts/PremierLeague-Regular.eot');
+          src: url('https://www.pesmania.web.id/assets/fonts/PremierLeague-Regular.eot?#iefix') format('embedded-opentype'),
+              url('https://www.pesmania.web.id/assets/fonts/PremierLeague-Regular.woff') format('woff'),
+              url('https://www.pesmania.web.id/assets/fonts/PremierLeague-Regular.ttf') format('truetype');
           font-weight: 400;
           font-style: normal;
           font-display: swap;
       }
       @font-face {
           font-family: 'PremierLeague';
-          src: url('assets/fonts/PremierLeague-Heavy.eot');
-          src: url('assets/fonts/PremierLeague-Heavy.eot?#iefix') format('embedded-opentype'),
-              url('assets/fonts/PremierLeague-Heavy.woff') format('woff'),
-              url('assets/fonts/PremierLeague-Heavy.ttf') format('truetype');
+          src: url('https://www.pesmania.web.id/assets/fonts/PremierLeague-Heavy.eot');
+          src: url('https://www.pesmania.web.id/assets/fonts/PremierLeague-Heavy.eot?#iefix') format('embedded-opentype'),
+              url('https://www.pesmania.web.id/assets/fonts/PremierLeague-Heavy.woff') format('woff'),
+              url('https://www.pesmania.web.id/assets/fonts/PremierLeague-Heavy.ttf') format('truetype');
           font-weight: 900;
           font-style: normal;
           font-display: swap;
       }
       @font-face {
           font-family: 'PremierLeague';
-          src: url('assets/fonts/PremierLeague-Bold.eot');
-          src: url('assets/fonts/PremierLeague-Bold.eot?#iefix') format('embedded-opentype'),
-              url('assets/fonts/PremierLeague-Bold.woff') format('woff'),
-              url('assets/fonts/PremierLeague-Bold.ttf') format('truetype');
+          src: url('https://www.pesmania.web.id/assets/fonts/PremierLeague-Bold.eot');
+          src: url('https://www.pesmania.web.id/assets/fonts/PremierLeague-Bold.eot?#iefix') format('embedded-opentype'),
+              url('https://www.pesmania.web.id/assets/fonts/PremierLeague-Bold.woff') format('woff'),
+              url('https://www.pesmania.web.id/assets/fonts/PremierLeague-Bold.ttf') format('truetype');
           font-weight: bold;
           font-style: normal;
           font-display: swap;
