UPDATES, privacy policy URL

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -18,7 +18,7 @@ const { noMarginTop = false } = Astro.props;
       <span class="separator">&nbsp;|&nbsp;</span>
       <span>All rights reserved.</span>
     </div>
-    <a href="#" class="hover:text-skin-accent">Privacy Policy</a>
+    <a href="privacy-policy" class="hover:text-skin-accent">Privacy Policy</a>
   </div>
 </footer>
 
