--- a/src/layouts/AboutLayout.astro
+++ b/src/layouts/AboutLayout.astro
@@ -20,7 +20,7 @@ const { frontmatter } = Astro.props;
   <Breadcrumbs />
   <main id="main-content" class="bg-skin-fill z-10">
     <section id="about" class="prose mb-16 max-w-5xl prose-img:border-0">
-      <h1 class="text-2xl font-PremierLeague2024 tracking-wider sm:text-4xl">{frontmatter.title}</h1>
+      <h1 class="text-2xl font-light sm:text-4xl">{frontmatter.title}</h1>
       <slot />
     </section>
   </main>
