--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -41,7 +41,7 @@ const { props } = Astro;
     @apply mx-auto w-full max-w-5xl px-4 pb-12 z-10 bg-skin-fill;
   }
   #main-content h1 {
-    @apply text-2xl font-semibold sm:text-3xl;
+    @apply text-2xl font-light sm:text-3xl;
   }
   #main-content p {
     @apply mb-6 mt-2 italic;
