--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   <Header />
   <main id="main-content" class="mt-24 bg-skin-fill z-10">
     <section id="hero">
-      <h1 class="mr-2 text-skin-accent">All About PES 2021, patch, mods, tutorial, and many more...</h1>
+      <h1 class="mr-2">All About PES 2021, patch, mods, tutorial, and many more...</h1>
       <!-- <a
         target="_blank"
         href="/rss.xml"
