UPDATES, blog contents

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -144,7 +144,7 @@ const { activeNav } = Astro.props;
     @apply col-span-2 flex items-center justify-center;
   }
   nav ul li a {
-    @apply w-full px-4 py-3 text-center font-bold hover:text-skin-accent sm:my-0 sm:px-2 sm:py-1;
+    @apply w-full px-4 py-3 text-center font-bold hover:text-skin-accent sm:my-0 sm:px-2 sm:py-1 hover:transition-colors hover:duration-300;
   }
   nav ul li:nth-last-child(2) a {
     @apply w-auto;
@@ -154,7 +154,7 @@ const { activeNav } = Astro.props;
     @apply col-span-1;
   }
   nav a.active {
-    @apply underline decoration-wavy decoration-2 underline-offset-4;
+    @apply text-skin-accent;
   }
   nav a.active svg {
     @apply fill-skin-accent;
@@ -228,40 +228,45 @@ const { activeNav } = Astro.props;
 
   toggleNav();
 
-  // Runs on view transitions navigation
-  document.addEventListener("astro:after-swap", toggleNav);
+  function toggleHeader() {
+    var prevScrollpos = window.scrollY;
 
-  var prevScrollpos = window.scrollY;
+    /* Get the header element and it's position */
+    var headerDiv = document.querySelector("#main-header");
+    // @ts-ignore
+    var headerBottom = headerDiv.offsetTop + headerDiv.offsetHeight*8;
 
-  /* Get the header element and it's position */
-  var headerDiv = document.querySelector("#main-header");
-  // @ts-ignore
-  var headerBottom = headerDiv.offsetTop + headerDiv.offsetHeight*8;
+    window.onscroll = function() {
+      var currentScrollPos = window.scrollY;
 
-  window.onscroll = function() {
-    var currentScrollPos = window.scrollY;
+      /* if we're scrolling up, or we haven't passed the header,
+        show the header at the top */
+      if (prevScrollpos > currentScrollPos  || currentScrollPos < headerBottom) {  
+        // @ts-ignore
+          headerDiv.classList.remove("hide");
+      }
+      else {
+          /* otherwise we're scrolling down & have passed the header so hide it */// @ts-ignore
+          headerDiv.classList.add("hide");
+      } 
 
-    /* if we're scrolling up, or we haven't passed the header,
-      show the header at the top */
-    if (prevScrollpos > currentScrollPos  || currentScrollPos < headerBottom) {  
-      // @ts-ignore
-        headerDiv.classList.remove("hide");
-    }
-    else {
-        /* otherwise we're scrolling down & have passed the header so hide it */// @ts-ignore
-        headerDiv.classList.add("hide");
-    } 
+      prevScrollpos = currentScrollPos;
 
-    prevScrollpos = currentScrollPos;
-
-    if(150 > currentScrollPos) {
-      // @ts-ignore
-      headerDiv.classList.remove("small");
-    }
-    else {
-      // @ts-ignore
-      headerDiv.classList.add("small");
+      if(150 > currentScrollPos) {
+        // @ts-ignore
+        headerDiv.classList.remove("small");
+      }
+      else {
+        // @ts-ignore
+        headerDiv.classList.add("small");
+      }
     }
   }
 
+  toggleHeader();
+  
+  // Runs on view transitions navigation
+  document.addEventListener("astro:after-swap", toggleNav);
+  document.addEventListener("astro:after-swap", toggleHeader);
+  
 </script>
