--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
 
 <Layout>
   <Header />
-  <main id="main-content" class="mt-24 bg-skin-fill z-10">
+  <main id="main-content" class="mt-12 sm:mt-24 bg-skin-fill z-10">
     <section id="hero">
       <h1 class="mr-2">All About PES 2021, patch, mods, tutorial, and many more...</h1>
       <!-- <a
@@ -39,7 +39,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
         </svg>
       </a> -->
       <p>
-        Bagi semua penggemar sepak bola, pasti sudah tidak asing lagi dengan game Pro Evolution Soccer. Maka dari itu, PESMANIA menghadirkan add-on dan pembaruan terbaik bagi semua gamer terutama PES, untuk tetap semangat dan memiliki antusias yang tinggi. Dengan ini, PESMANIA juga berusaha menjadi platform terbaik bagi mereka yang mencari simulator sepak bola terbaik di dunia. Kami membagikan modul terbaru yang memungkinkan memiliki banyak papan skor untuk kompetisi atau liga apa pun. Patch terbaru dapat menjadikan semua tim berlisensi dengan nama resmi, logo, kit, dan yang lainnya.
+        For all football fans, you must be familiar with the game Pro Evolution Soccer. Therefore, PESMANIA presents the best add-ons and updates for all PES gamers, to keep them enthusiastic and have high enthusiasm. With this, PESMANIA also strives to be the best platform for those looking for the best football simulator in the world. We share the latest module that allows having multiple scoreboards for any competition or league. The latest patch could see all licensed teams with official names, logos, kits and more.
       </p>
       
       <!-- {
