--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -56,6 +56,8 @@ const ogUrl = new URL(
       <Content />
     </article>
 
+    <hr class="border-skin-line mt-8" />
+
     <ul class="tags-container">
       {tags.map(tag => <Tag name={slugifyStr(tag)} />)}
     </ul>
@@ -76,7 +78,7 @@ const ogUrl = new URL(
     @apply mx-auto w-full max-w-5xl px-4 pb-12;
   }
   .post-title {
-    @apply text-2xl sm:text-4xl font-bold text-skin-accent;
+    @apply text-2xl sm:text-4xl font-bold;
   }
   .tags-container {
     @apply my-8;
