--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
         </svg>
       </a> -->
       <p>
-        For all football fans, you must be familiar with the game Pro Evolution Soccer. Therefore, PESMANIA presents the best add-ons and updates for all PES gamers, to keep them enthusiastic and have high enthusiasm. With this, PESMANIA also strives to be the best platform for those looking for the best football simulator in the world. We share the latest module that allows having multiple scoreboards for any competition or league. The latest patch could see all licensed teams with official names, logos, kits and more.
+        For all football fans, you must be familiar with the game Pro Evolution Soccer. Therefore, PESMania presents the best add-ons and updates for all PES gamers, to keep them enthusiastic and have high enthusiasm. With this, PESMania also strives to be the best platform for those looking for the best football simulator in the world. We share the latest module that allows having multiple scoreboards for any competition or league. The latest patch could see all licensed teams with official names, logos, kits and more.
       </p>
       
       <!-- {
