--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
 
 <Layout>
   <Header />
-  <main id="main-content" class="mt-12 sm:mt-24 bg-skin-fill z-10">
+  <main id="main-content" class="mt-10 sm:mt-24 bg-skin-fill z-10">
     <section id="hero">
       <h1 class="mr-2">All About PES 2021, patch, mods, tutorial, and many more...</h1>
       <!-- <a
@@ -113,7 +113,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
 <style>
   /* ===== Hero Section ===== */
   #hero {
-    @apply pb-6 pt-8;
+    @apply pb-6;
   }
   #hero h1 {
     @apply my-4 inline-block text-3xl font-bold sm:my-8 sm:text-5xl;
