--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -122,7 +122,7 @@ const { activeNav } = Astro.props;
     @apply mx-auto flex max-w-5xl flex-col items-center justify-between sm:flex-row;
   }
   .top-nav-wrap {
-    @apply relative flex w-full items-start justify-between p-4 sm:items-center sm:py-8;
+    @apply relative flex w-full items-start justify-between px-4 py-2 sm:items-center ;
   }
   .logo {
     @apply absolute py-1 text-xl font-semibold text-skin-accent sm:static sm:text-4xl mt-0.5;
@@ -188,12 +188,8 @@ const { activeNav } = Astro.props;
   #main-header {
     &.hide {
       @apply
-        translate-y-[-100px]
+        translate-y-[-67px]
         top-0;
-    }
-    >div {
-      @apply 
-        sm:h-[100px];
     }
     &.small {
       @apply
@@ -201,8 +197,8 @@ const { activeNav } = Astro.props;
     }
     .nav-open & {
       @apply
-        translate-y-[100px]
-        top-[-100px];
+        translate-y-[67px]
+        top-[-67px];
     }
   }
 </style>
