--- a/src/layouts/Posts.astro
+++ b/src/layouts/Posts.astro
@@ -23,7 +23,7 @@ const next = pageNum < totalPages ? "" : "disabled";
 
 <Layout title={`Posts | ${SITE.title}`}>
   <Header activeNav="posts" />
-  <Main pageTitle="Posts" pageDesc="All the articles I've posted.">
+  <Main pageTitle="The Blog Posts" pageDesc="All the articles I've posted.">
     <ul class="sm:grid sm:grid-cols-2 sm:gap-6">
       {
         posts.map(({ data }) => (
