--- a/src/components/Breadcrumbs.astro
+++ b/src/components/Breadcrumbs.astro
@@ -13,7 +13,7 @@ breadcrumbList[0] === "posts" &&
 ---
 
 <nav class="breadcrumb" aria-label="breadcrumb">
-  <ul>
+  <ul class="col-span-8 sm:col-start-2 sm:col-span-6">
     <li>
       <a href="/">Home</a>
       <span aria-hidden="true">&nbsp;&gt;&nbsp;</span>
@@ -43,7 +43,7 @@ breadcrumbList[0] === "posts" &&
 
 <style>
   .breadcrumb {
-    @apply mx-auto mt-24 sm:mt-24 my-8 w-full max-w-5xl px-4;
+    @apply mx-auto mt-20 sm:mt-24 mb-8 w-full grid grid-cols-8 gap-8 px-4;
   }
   .breadcrumb ul li {
     @apply inline;
