--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -119,7 +119,7 @@ const { activeNav } = Astro.props;
     @apply absolute -top-full left-16 z-50 bg-skin-accent px-3 py-2 text-skin-inverted transition-all focus:top-4;
   }
   .nav-container {
-    @apply mx-auto flex max-w-5xl flex-col items-center justify-between sm:flex-row;
+    @apply mx-auto flex max-w-8xl flex-col items-center justify-between sm:flex-row;
   }
   .top-nav-wrap {
     @apply relative flex w-full items-start justify-between px-4 py-2 sm:items-center ;
@@ -186,15 +186,17 @@ const { activeNav } = Astro.props;
     @apply opacity-100;
   }
   #main-header {
+    @apply
+        backdrop-blur-md
+        bg-skin-fill/75;
     &.hide {
       @apply
         translate-y-[-67px]
         top-0;
     }
-    &.small {
-      @apply
-        bg-skin-fill;
-    }
+    /* &.small {
+      
+    } */
     .nav-open & {
       @apply
         translate-y-[67px]
