--- a/src/layouts/AboutLayout.astro
+++ b/src/layouts/AboutLayout.astro
@@ -18,8 +18,8 @@ const { frontmatter } = Astro.props;
 <Layout title={`${frontmatter.title} | ${SITE.title}`}>
   <Header activeNav="about" />
   <Breadcrumbs />
-  <main id="main-content" class="bg-skin-fill z-10">
-    <section id="about" class="prose mb-16 max-w-5xl prose-img:border-0">
+  <main id="main-content" class="mx-auto w-full grid grid-cols-8 gap-8 px-4 pb-12 z-10 bg-skin-fill">
+    <section id="about" class="prose mb-16 col-span-8 sm:col-start-2 sm:col-span-6 prose-img:border-0 max-w-full px-0">
       <h1 class="text-2xl font-light sm:text-4xl">{frontmatter.title}</h1>
       <slot />
     </section>
