--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import Card from "@components/Card";
 import getSortedPosts from "@utils/getSortedPosts";
 import slugify from "@utils/slugify";
 import { SOCIALS } from "@config";
+import Socials from "@components/Socials.astro";
 
 const posts = await getCollection("blog");
 
@@ -20,90 +21,93 @@ const socialCount = SOCIALS.filter(social => social.active).length;
 
 <Layout>
   <Header />
-  <main id="main-content" class="mt-10 sm:mt-24 bg-skin-fill z-10">
-    <section id="hero">
-      <h1 class="mr-2">All About PES 2021, patch, mods, tutorial, and many more...</h1>
-      <!-- <a
-        target="_blank"
-        href="/rss.xml"
-        class="rss-link"
-        aria-label="rss feed"
-        title="RSS Feed"
-      >
-        <svg xmlns="http://www.w3.org/2000/svg" class="rss-icon"
-          ><path
-            d="M19 20.001C19 11.729 12.271 5 4 5v2c7.168 0 13 5.832 13 13.001h2z"
-          ></path><path
-            d="M12 20.001h2C14 14.486 9.514 10 4 10v2c4.411 0 8 3.589 8 8.001z"
-          ></path><circle cx="6" cy="18" r="2"></circle>
-        </svg>
-      </a> -->
-      <p>
-        For all football fans, you must be familiar with the game Pro Evolution Soccer. Therefore, PESMania presents the best add-ons and updates for all PES gamers, to keep them enthusiastic and have high enthusiasm. With this, PESMania also strives to be the best platform for those looking for the best football simulator in the world. We share the latest module that allows having multiple scoreboards for any competition or league. The latest patch could see all licensed teams with official names, logos, kits and more.
-      </p>
-      
-      <!-- {
-        // only display if at least one social link is enabled
-        socialCount > 0 && (
-          <div class="social-wrapper">
-            <div class="social-links">Social Links:</div>  
-            <Socials />
-          </div>
-        )
-      } -->
-    </section>
+  <main id="main-content" class="mx-auto mt-24 w-full grid grid-cols-8 gap-8 px-4 pb-12 z-10 bg-skin-fill">
+    <div class="col-span-8 sm:col-start-2 sm:col-span-6 max-w-full px-0">
+      <section id="hero" class="max-w-full px-0">
 
-    <Hr />
-
-    {
-      featuredPosts.length > 0 && (
-        <>
-          <section id="featured">
-            <h2 class="font-PremierLeague2024">Featured</h2>
-            <ul>
-              {featuredPosts.map(({ data }) => (
-                <Card
-                  href={`/posts/${slugify(data)}`}
-                  frontmatter={data}
-                  secHeading={false}
-                />
-              ))}
-            </ul>
-          </section>
-          <Hr />
-        </>
-      )
-    }
-
-    <section id="recent-posts">
-      <h2 class="font-PremierLeague2024">Recent Posts</h2>
-      <ul class="sm:grid sm:grid-cols-2 sm:gap-6">
-        {
-          sortedPosts
-            .filter(({ data }) => !data.featured)
-            .map(
-              ({ data }, index) =>
-                index < 4 && (
-                  <Card
-                    href={`/posts/${slugify(data)}`}
-                    frontmatter={data}
-                    secHeading={false}
-                  />
-                )
-            )
-        }
-      </ul>
-      <div class="all-posts-btn-wrapper">
-        <LinkButton href="/posts">
-          All Posts
-          <svg xmlns="http://www.w3.org/2000/svg"
+        <h1 class="mr-2">All About PES 2021, patch, mods, tutorial, and more another stuff...</h1>
+        <!-- <a
+          target="_blank"
+          href="/rss.xml"
+          class="rss-link"
+          aria-label="rss feed"
+          title="RSS Feed"
+        >
+          <svg xmlns="http://www.w3.org/2000/svg" class="rss-icon"
             ><path
-              d="m11.293 17.293 1.414 1.414L19.414 12l-6.707-6.707-1.414 1.414L15.586 11H6v2h9.586z"
-            ></path>
+              d="M19 20.001C19 11.729 12.271 5 4 5v2c7.168 0 13 5.832 13 13.001h2z"
+            ></path><path
+              d="M12 20.001h2C14 14.486 9.514 10 4 10v2c4.411 0 8 3.589 8 8.001z"
+            ></path><circle cx="6" cy="18" r="2"></circle>
           </svg>
-        </LinkButton>
-      </div>
-    </section>
+        </a> -->
+        <p>
+          For all football fans, you must be familiar with the game Pro Evolution Soccer. Therefore, PESMania presents the best add-ons and updates for all PES gamers, to keep them enthusiastic and have high enthusiasm. With this, PESMania also strives to be the best platform for those looking for the best football simulator in the world. We share the latest module that allows having multiple scoreboards for any competition or league. The latest patch could see all licensed teams with official names, logos, kits and more.
+        </p>
+        
+        {
+          // only display if at least one social link is enabled
+          socialCount > 0 && (
+            <div class="social-wrapper">
+              <div class="social-links">Social Links:</div>  
+              <Socials />
+            </div>
+          )
+        }
+      </section>
+
+      <Hr noPadding={true} />
+
+      {
+        featuredPosts.length > 0 && (
+          <>
+            <section id="featured" class="max-w-full px-0">
+                <h2 class="font-PremierLeague2024">Featured</h2>
+                <ul>
+                  {featuredPosts.map(({ data }) => (
+                    <Card
+                      href={`/posts/${slugify(data)}`}
+                      frontmatter={data}
+                      secHeading={false}
+                    />
+                  ))}
+                </ul>
+            </section>
+            <Hr noPadding={true} />
+          </>
+        )
+      }
+
+      <section id="recent-posts" class="max-w-full px-0">
+        <h2 class="text-skin-accent !font-light">Recent Posts</h2>
+        <ul class="sm:grid sm:grid-cols-2 sm:gap-6">
+          {
+            sortedPosts
+              .filter(({ data }) => !data.featured)
+              .map(
+                ({ data }, index) =>
+                  index < 4 && (
+                    <Card
+                      href={`/posts/${slugify(data)}`}
+                      frontmatter={data}
+                      secHeading={false}
+                    />
+                  )
+              )
+          }
+        </ul>
+        <div class="all-posts-btn-wrapper">
+          <LinkButton href="/posts">
+            All Posts
+            <svg xmlns="http://www.w3.org/2000/svg"
+              ><path
+                d="m11.293 17.293 1.414 1.414L19.414 12l-6.707-6.707-1.414 1.414L15.586 11H6v2h9.586z"
+              ></path>
+            </svg>
+          </LinkButton>
+        </div>
+      </section>
+    </div>
   </main>
   <hr class="border-skin-line mb-44 sm:mb-[75px]" />
 
